Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyConfig__c/DeweyConfig__c.object-meta.xml
<CustomObject>
    <description>Configuration keys and values for the Dewey assessment tool: thresholds, scoring weights, global parameters.</description>
    <label>Dewey Config</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dewey Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>