Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyConfig__c/fields/ConfigKey__c.field-meta.xml
<CustomField>
    <fullName>ConfigKey__c</fullName>
    <description>Unique configuration key. Used as join key by sf_config_service. Format: snake_case (e.g. threshold_apex_complexity).</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Config Key</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>