Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyConfig__c/fields/ConfigValue__c.field-meta.xml
<CustomField>
    <fullName>ConfigValue__c</fullName>
    <description>Value for this configuration key. Always stored as text; cast to the appropriate type in Python.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Config Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>