Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyConfig__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>